# muxpack.py

./: .gitignore  .readthedocs.yaml  README.md  main.py  pyproject.toml
.github/workflow/: python.yml
.github/workflows/: python.yml
docs/: api.rst  conf.py  index.rst  requirements.txt  usage.rst
example/: example.py
src/muxpack/: __init__.py  bipartite.py  check.py  io.py  multiplex.py  multiplexseries.py  networkx.py  sparsematrix.py  to_csr_matrix.py
tests/: test_add_filter.py  test_bipartite.py  test_check.py  test_filter.py  test_io_network.py  test_load_network.py  test_main.py  test_multiplex.py  test_multiplexseries.py  test_to_csr_matrix.py
