[project]
name = "muxpack"
version = "0.2.0dev1"
description = "Tools to handle multiplex network data more easily"
readme = "README.md"
authors = [
    { name = "Edwin de Jonge", email = "edwindjonge@gmail.com" },
    { name = "Jan van der Laan", email = "djvanderlaan@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "ibis-framework[duckdb]>=12.0.0",
    "networkx>=3.6.1",
    "scipy>=1.17.1",
]

[project.urls]
Homepage = "https://codeberg.org/CBS-Networktools/muxpack.py"
Documentation = "https://readthedocs.org"
Repository = "https://codeberg.org/CBS-Networktools/muxpack.py"
"Bug Tracker" = "https://codeberg.org/CBS-Networktools/muxpack.py/issues"

[project.scripts]
muxpack = "muxpack:main"

[build-system]
requires = ["uv_build>=0.10.6,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.4",
]
docs = [
    "sphinx>=9.1.0",
    "sphinx-rtd-theme>=3.0.0",
]

[tool.ruff.lint]
extend-select = ["B"]
